# Llama-Drama-2

./: README.md  justfile  pyproject.toml  test.env
ll7ma/: tools.py
ll7ma/agents/: supa.py
tests/: test_setup.py  test_supa.py
