[tool.poetry]
name = "llama-drama-2"
version = "0.1.0"
description = ""
authors = ["Zachary Karpinski <zkarpinski@protonmail.com>"]
readme = "README.md"

packages = [
    { include = "ll7ma" }]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.15"
langchain-core = "^0.3.31"
langchain-community = "^0.3.15"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
notebook = "^7.3.2"
pandas = "^2.2.3"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
